# oracle-migration-analyzer

./: .gitignore  CHANGELOG.md  CLAUDE.md  FILE_SIZE_VALIDATION_REPORT.md  IMPORT_PATH_UPDATE_REPORT.md  README.md  README_EN.md  TASK_4.10_AND_4.19_COMPLETION_SUMMARY.md  TASK_4.3_IMPORT_PATH_COMPLETION_SUMMARY.md  TASK_4.4_CONSTANTS_IMPORT_COMPLETION_SUMMARY.md  analyze_batch_samples.py  analyze_sample.py  example_awr_analysis.py  example_awr_batch_analysis.py  example_awr_comparison.py  example_batch_analysis.py  example_batch_usage.py  example_cli_usage.sh  example_migration_analysis.py  example_migration_recommendation.py  example_migration_recommendation_full_workflow.py  example_multi_db_reports.py  example_result_formatter.py  example_single_file.py  example_usage.py  generate_sample_reports.py  generate_sql_sample_reports.py  mypy.ini  pyproject.toml  requirements.txt
docs/: ANALYSIS_MODES_AND_DATA_REQUIREMENTS.md  DBCSI_REPORT_DATA_ENHANCEMENT.md  DECISION_ENGINE_FORMULAS.md  PLSQL_COMPLEXITY_FORMULA_EXPLAINED.md  QUICK_ASSESSMENT_ORACLE_NECESSITY.md  SQL_COMPLEXITY_FORMULA_EXPLAINED.md  WHAT_IS_ORACLE_MIGRATION_ANALYZER.md  ai_assisted_migration.md  complexity_mysql.md  complexity_postgresql.md  migration_guide_aurora_mysql80.md  migration_guide_aurora_pg16.md  migration_recommendation_api.md  oracle_complexity_formula.md
oracle_check_sql/: ora_mig_check_stats.sql  ora_plsql_ee.sql  ora_plsql_full.sql
reports/: sample_sql_complexity_report.md  sample_statspack_report.json  sample_statspack_report.md
sample_code/: awr-hist-SAMPLED-2568186653-23632-23834.out  complex_data_migration.sql  complex_query.sql  dbcsi_statspack_sample01.out  hierarchical_recursive_query.sql  package_example.pls  sample_plsql.sql  sample_plsql01.sql  sample_plsql02.sql  sample_plsql03.sql  simple_query.sql
src/: __init__.py  exceptions.py  oracle_complexity_analyzer.py  types.py
tests/: __init__.py  test_awr_end_to_end.py  test_awr_parser_properties.py  test_batch_analyzer.py  test_cli_file_detection_properties.py  test_common_exceptions.py  test_complexity_calculator.py  test_conversion_guide_provider.py  test_data_models.py  test_dbcsi_batch_analyzer.py  test_dbcsi_cli.py  test_dbcsi_data_models_properties.py  test_dbcsi_parser_properties.py  test_dbcsi_section_parsers.py  test_end_to_end.py  test_exceptions_and_logging.py  test_migration_analyzer_properties.py  test_migration_recommendation_cli.py  test_migration_recommendation_data_models.py  test_migration_recommendation_decision_engine.py  test_migration_recommendation_end_to_end.py  test_migration_recommendation_formatters.py  test_migration_recommendation_formatters_integration.py  test_migration_recommendation_integrator.py  test_plsql_parser.py  (+12 more)
(+295 files in other folders)
